--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /* ROOT */
 /* :root {
@@ -6,59 +6,6 @@
   --main-bg-color: #fafafa;
   --main-text-color: #111517;
 } */
-
-/* outfit-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./assets/fonts/outfit-v11-latin-regular.eot'); /* IE9 Compat Modes */
-  src: url('./assets/fonts/outfit-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./assets/fonts/outfit-v11-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-       url('./assets/fonts/outfit-v11-latin-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-       url('./assets/fonts/outfit-v11-latin-regular.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-       url('./assets/fonts/outfit-v11-latin-regular.svg#Outfit') format('svg'); /* Legacy iOS */
-}
-/* outfit-500 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 500;
-  src: url('./assets/fonts/outfit-v11-latin-500.eot'); /* IE9 Compat Modes */
-  src: url('./assets/fonts/outfit-v11-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./assets/fonts/outfit-v11-latin-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-       url('./assets/fonts/outfit-v11-latin-500.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-       url('./assets/fonts/outfit-v11-latin-500.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-       url('./assets/fonts/outfit-v11-latin-500.svg#Outfit') format('svg'); /* Legacy iOS */
-}
-/* outfit-600 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 600;
-  src: url('./assets/fonts/outfit-v11-latin-600.eot'); /* IE9 Compat Modes */
-  src: url('./assets/fonts/outfit-v11-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./assets/fonts/outfit-v11-latin-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-       url('./assets/fonts/outfit-v11-latin-600.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-       url('./assets/fonts/outfit-v11-latin-600.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-       url('./assets/fonts/outfit-v11-latin-600.svg#Outfit') format('svg'); /* Legacy iOS */
-}
-/* outfit-700 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Outfit';
-  font-style: normal;
-  font-weight: 700;
-  src: url('./assets/fonts/outfit-v11-latin-700.eot'); /* IE9 Compat Modes */
-  src: url('./assets/fonts/outfit-v11-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./assets/fonts/outfit-v11-latin-700.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-       url('./assets/fonts/outfit-v11-latin-700.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
-       url('./assets/fonts/outfit-v11-latin-700.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-       url('./assets/fonts/outfit-v11-latin-700.svg#Outfit') format('svg'); /* Legacy iOS */
-}
 
 html {
   box-sizing: border-box;
@@ -102,17 +49,41 @@ img {
 
 .container {
   width: 100%;
-  max-width: 1344px;
+  max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 48px;
-  padding-left: 48px;
+  padding-right: 16px; /* Mobil uchun kichik padding */
+  padding-left: 16px;
+}
+
+/* Tablet (≥ 640px) */
+@media (min-width: 640px) {
+  .container {
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+}
+
+/* Laptop (≥ 1024px) */
+@media (min-width: 1024px) {
+  .container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+}
+
+/* Katta ekran (≥ 1280px) */
+@media (min-width: 1280px) {
+  .container {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
 }
 
 ol,
 ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  /* margin-top: 0;
+  margin-bottom: 0; */
   /* padding-left: 0; */
   list-style: none;
 }
