--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
   font-family: 'Outfit', sans-serif;
   font-weight: 400;
   background-color: #02020d;
+  overflow-x: hidden;
 }
 
 img {
@@ -90,4 +91,8 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+.my-gradient {
+  mask-image: linear-gradient(to right rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)20%, rgba(0, 0, 0, 1)80%, rgba(0, 0, 0, 0));
 }
