--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,57 @@ a {
   text-decoration: none;
 }
 
+main {
+  flex-grow: 1;
+}
+
 .my-gradient {
-  mask-image: linear-gradient(to right rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)20%, rgba(0, 0, 0, 1)80%, rgba(0, 0, 0, 0));
+  -webkit-mask-image: linear-gradient(
+    to right, 
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
+  mask-image: linear-gradient(
+    to right, 
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
+}
+
+
+.question::before {
+  content: '';
+  position: absolute;
+  inset: -1px; /* Border qalinligi */
+  border-radius: 24px;
+  padding: 1.5px;
+  background: linear-gradient(319deg, #081722 55.06%, #139bfd 101.7%);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.question:hover::before {
+  opacity: 1;
+}
+
+input:-webkit-autofill {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: white !important;
+}
+
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  background-color: transparent !important;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: white !important;
 }
