--- a/src/index.css
+++ b/src/index.css
@@ -96,21 +96,20 @@ main {
 
 .my-gradient {
   -webkit-mask-image: linear-gradient(
-    to right, 
+    to right,
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 1) 10%,
     rgba(0, 0, 0, 1) 90%,
     rgba(0, 0, 0, 0)
   );
   mask-image: linear-gradient(
-    to right, 
+    to right,
     rgba(0, 0, 0, 0),
     rgba(0, 0, 0, 1) 10%,
     rgba(0, 0, 0, 1) 90%,
     rgba(0, 0, 0, 0)
   );
 }
-
 
 .question::before {
   content: '';
@@ -144,3 +143,24 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
   -webkit-text-fill-color: white !important;
 }
+
+/* Pagination tugmalarini kattalashtirish */
+.swiper-pagination-bullet {
+  width: 24px !important; 
+  height: 6px !important;
+  border-radius: 6px !important;
+  background-color: rgba(97, 146, 208, 0.40) !important;
+}
+
+/* Aktiv tugmani yanada kattalashtirish */
+.swiper-pagination-bullet-active {
+  background-color: #6192D0 !important; /* Aktiv rang */
+}
+
+/* Pagination tugmalarini pastga tushirish */
+.swiper-pagination {
+  position: absolute !important;
+  bottom: 25px !important; /* Pastga tushirish */
+}
+
+/* Agar masofa yetarli bo‘lmasa, qiymatini kattalashtiring */
