--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ input:-webkit-autofill:active {
 
 .custom {
   display: flex;
-  justify-content: center; /* Markazga joylash */
+  justify-content: center;
   align-items: center;
   gap: 8px;
   width: 100%;
