--- a/src/index.css
+++ b/src/index.css
@@ -55,24 +55,31 @@ body {
 /* Tablet (≥ 640px) */
 @media (min-width: 640px) {
   .container {
-    padding-right: 24px;
-    padding-left: 24px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
 /* Laptop (≥ 1024px) */
 @media (min-width: 1024px) {
   .container {
-    padding-right: 32px;
-    padding-left: 32px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
 /* Katta ekran (≥ 1280px) */
 @media (min-width: 1280px) {
   .container {
-    padding-right: 48px;
-    padding-left: 48px;
+    padding-right: 25px;
+    padding-left: 25px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .container {
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
 
